--- a/css/style.css
+++ b/css/style.css
@@ -56,13 +56,13 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
 
 body {
   margin: 0;
-  font-family: "Work Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
+  font-family: "Work Numito", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 3rem;
+  font-weight: 700;
+  line-height: 3.5;
   color: #212529;
   text-align: left;
-  background-color: #fff; }
+  background-color: bisque; }
 
 [tabindex="-1"]:focus {
   outline: 0 !important; }
@@ -7269,10 +7269,10 @@ a.text-dark:hover, a.text-dark:focus {
 
 body {
   font-family: "Overpass", Arial, sans-serif;
-  background: peru;
-  font-size: 16px;
+  background: beige;
+  font-size: 20px;
   line-height: 1.8;
-  font-weight: 300;
+  font-weight: 400;
   color: darkgreen; }
   body.menu-show {
     overflow: hidden;
@@ -7297,7 +7297,7 @@ h1, h2, h3, h4, h5,
   line-height: 1.4;
   color: #000;
   font-family: "Dosis", Arial, sans-serif;
-  font-weight: 400; }
+  font-weight: 500; }
 
 .text-primary {
   color: #f86f2d !important; }
@@ -7320,7 +7320,7 @@ h1, h2, h3, h4, h5,
       .ftco-navbar-light .navbar-brand {
         color: #fff; } }
   .ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
-    font-size: 16px;
+    font-size: 25px;
     padding-top: .9rem;
     padding-bottom: .9rem;
     padding-left: 20px;
@@ -7370,7 +7370,7 @@ h1, h2, h3, h4, h5,
     -webkit-border-radius: 30px;
     -moz-border-radius: 30px;
     -ms-border-radius: 30px;
-    border-radius: 30px; }
+    border-radius: 40px; }
     .ftco-navbar-light .navbar-nav > .nav-item.cta > a span {
       display: inline-block;
       color: #fff; }
@@ -7387,7 +7387,7 @@ h1, h2, h3, h4, h5,
     cursor: pointer;
     padding-right: 0;
     text-transform: uppercase;
-    font-size: 16px;
+    font-size: 18px;
     letter-spacing: .1em; }
   .ftco-navbar-light.scrolled {
     position: fixed;
@@ -7806,7 +7806,7 @@ h1, h2, h3, h4, h5,
   background: transparent !important;
   color: rgba(255, 255, 255, 0.8) !important;
   font-size: 18px;
-  border-radius: 0px;
+  border-radius: 18px;
   -webkit-box-shadow: none !important;
   box-shadow: none !important; }
   .volunter-form .form-control::-webkit-input-placeholder {
